<resources>
    <string name="app_name">PopDQ</string>
    <string name="pop_dq_email">popmeaquestion@popdq.com</string>
    <string name="login">Login</string>
    <string name="login_up">LOG IN</string>
    <string name="login_option">LOGIN OPTION</string>
    <string name="with_fb">WITH FACEBOOK</string>
    <string name="with_google">WITH GOOGLE</string>
    <string name="with_email">WITH EMAIL</string>
    <string name="login_with_email">LOGIN WITH EMAIL</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="sign_up">SIGNUP</string>
    <string name="sign__up">SIGN UP</string>
    <string name="sign_up_option">SIGNUP OPTIONS</string>
    <string name="sign_up_now">SIGNUP NOW </string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="forgot_pass_title">Forgot password</string>
    <string name="click_here">CLICK  HERE</string>
    <string name="fill_your_email">Fill your email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="description_reset_password">Please insert your email</string>
    <string name="reset">RESET</string>
    <string name="description_forget_pass">Please check the email for instruction to retrieve your code</string>
    <string name="resend">RESEND</string>
    <string name="done">DONE</string>
    <string name="profile">PROFILE</string>
    <string name="profile_low">Profile</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="profile_infomation">YOUR PROFILE</string>
    <string name="username">User Name</string>
    <string name="username_expert">USER NAME</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="anonymous_mode">Anonymous Mode</string>
    <string name="anonymous">Anonymous</string>
    <string name="fill_your_password">Fill your new password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="home">HOME</string>
    <string name="home_low">Home</string>
    <string name="help">HELP</string>
    <string name="replies">Replies</string>
    <string name="my_question">MY QUESTIONS</string>
    <string name="my_answer">MY ANSWERS</string>
    <string name="message">MESSAGE</string>
    <string name="buy_credit">BUY CREDITS</string>
    <string name="share">SHARE</string>
    <string name="my_interest">MY INTEREST</string>
    <string name="favorite_list">FOLLOWING</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="credit_left">Credits Left</string>
    <string name="find_out_something">POP A QUESTON</string>
    <string name="favorites">Favorites</string>
    <string name="views">Views</string>
    <string name="view_low">View</string>
    <string name="view">VIEW</string>
    <string name="views_upper">VIEWS</string>
    <string name="question">QUESTION </string>
    <string name="description_interest">Select categories to filter the answers that appear on your Feed</string>
    <string name="description_interest_limit">Select up to 3 categories</string>
    <string name="save">SAVE</string>
    <string name="solved">SOLVED</string>
    <string name="ask">Ask</string>
    <string name="ask_expert">Select user to pop a question</string>
    <string name="hint_search_users">Search User</string>
    <string name="name">NAME</string>
    <string name="name_hint">Name</string>
    <string name="professional_field">PROFESSIONAL FIELD</string>
    <string name="professional_field_hint">Select category</string>
    <string name="select_country">Select country</string>
    <string name="expert_year">EXPERIENCE YEAR</string>
    <string name="expert_year_hint">Experience Year</string>
    <string name="location_and_origins">LOCATION AND ORIGINS</string>
    <string name="location_and_origins_hint">Location and Origins</string>
    <string name="description">DESCRIPTION</string>
    <string name="description_hint">Description</string>
    <string name="description_hint_edit">Description \n\nGive us a short description about yourself, your profession or your area of expertise</string>
    <string name="search">Search PopDQ</string>
    <string name="title">Title</string>
    <string name="not_match_password">Not match password!</string>
    <string name="email_wrong">Invalid Email. Please key in again</string>
    <string name="verifi_email">EMAIL VERIFICATION</string>
    <string name="verification">VERIFICATION</string>
    <string name="verification_error">Verification error. All fields must be filled in</string>
    <string name="not_successful">Sign up/Log in is not successful. Please try again</string>
    <string name="facebook_app_id">187773938297743</string>
    <string name="branch_key">key_live_aoziLiWzo0o8Cgfdosk12nhhuulNOw8a</string>
    <string name="text_price">Text Price</string>
    <string name="voice_price">Voice Price</string>
    <string name="video_price">Video Price</string>
    <string name="select_text_price">Select per text reply</string>
    <string name="select_voice_price">Select per voice reply</string>
    <string name="select_video_price">Select per video reply</string>
    <string name="followed">has followed you</string>
    <string name="per_text_price">per text reply</string>
    <string name="per_voice_price">per voice reply</string>
    <string name="per_video_price">per video reply</string>
    <string name="language">Language</string>
    <string name="upload_success">Updated successfully</string>
    <string name="menu">MENU</string>
    <string name="password_more_than_6">Password must more than 6 characters and less than 20 characters</string>
    <string name="view_answer">VIEW ANSWER</string>
    <string name="provide_answer">PROVIDE ANSWER</string>
    <string name="hint_text_credit">Select Text Answers Price</string>
    <string name="hint_voice_credit">Select Voice Answers Price</string>
    <string name="hint_video_credit">Select Video Answers Price</string>
    <string name="code">CODE</string>
    <string name="error_verification">Verification Code is Incorrect</string>
    <string name="launguage">Language</string>
    <string name="reply_method">Reply Preference</string>
    <string name="method_voice">VOICE RECORD</string>
    <string name="decline">DECLINE</string>
    <string name="reply">REPLY</string>
    <string name="upload_images">UPLOAD IMAGES</string>
    <string name="free_for_preview">Free for Views</string>
    <string name="asking_anonymously">Asking Anonymously</string>
    <string name="do_you_want_delete_this_image">Do you want to delete this Image?</string>
    <string name="reply_method_text">TEXT REPLY</string>
    <string name="reply_method_voice">AUDIO REPLY</string>
    <string name="reply_method_video">VIDEO REPLY</string>
    <string name="type_your_answer">Type your answer</string>
    <string name="provide_text_answer">PROVIDE TEXT ANSWER</string>
    <string name="provide_voice_answer">PROVIDE VOICE ANSWER</string>
    <string name="provide_video_answer">PROVIDE VIDEO ANSWER</string>
    <string name="submit_answer">SUBMIT</string>
    <string name="attachment_image">ATTACHMENT IMAGES</string>
    <string name="click_to_view_question">CLICK TO VIEW QUESTION\'S DETAIL</string>
    <string name="give_rating">Give Rating!</string>
    <string name="text_answer">TEXT ANSWER</string>
    <string name="ask_question">POP A QUESTION</string>
    <string name="do_you_want_reject">Do you want to reject this question?</string>
    <string name="earnings">Earnings:</string>
    <string name="credits">Credits:</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="toast_recording_start">Start</string>
    <string name="toast_recording_finish">Recording DONE!</string>
    <string name="record_in_progress">Record in progress</string>
    <string name="send">Send</string>
    <string name="message_record_done">Do you want to send this record?</string>
    <string name="record_again">Record Agian</string>
    <string name="duration">Duration</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="audio_answer">AUDIO ANSWER</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="loading">Loading...</string>
    <string name="video_answer">VIDEO ANSWER</string>
    <string name="language_answer">Written Language: </string>
    <string name="language_spoken">Spoken Language: </string>
    <string name="verified">VERIFIED</string>
    <string name="add_to_favorite">ADD TO FAV</string>
    <string name="do_you_want_remove_favorite">Do you want to remove this user from favorites?</string>
    <string name="my_answerd_question">MY ANSWERED QUESTIONS</string>
    <string name="withdraw">CASH OUT EARNINGS</string>
    <string name="withdraw_title">WITHDRAW EARNINGS</string>
    <string name="withdraw_underline"><u>Withdraw</u></string>
    <string name="description_withdraw">Input your paypal account\'s email and the amount of payment you\'d like to withdraw from your earnings</string>
    <string name="paypal_email">Paypal Email</string>
    <string name="paypal_email_confirm">Confirm Paypal Email</string>
    <string name="withdraw_amount">Withdrawal Amount</string>
    <string name="withdraw_fee">Withdrawal Fee: </string>
    <string name="withdraw_process_time">Withdrawal Process Time: </string>
    <string name="request">REQUEST</string>
    <string name="from_earnings">FROM EARNINGS</string>
    <string name="title_convert_credit">Transfer earnings to credits now</string>
    <string name="cancel">CANCEL</string>
    <string name="convert">CONVERT</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="minute_ago">minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <plurals name="hours_ago">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <string name="yesterday">yesterday</string>
    <string name="with_draw_success">Withdraw Success!</string>
    <string name="do_you_want_logout">Do you want to log out?</string>
    <string name="you_will_fee_is">Do you want to deduct $%s from your credit account? </string>
    <string name="my_views">MY VIEWS</string>
    <string name="reply_success">Replied successfully</string>
    <string name="notice">NOTICE</string>
    <string name="ask_success">Asked successfully</string>
    <string name="ask_failed">Failed to submit question. Please try again</string>
    <string name="log_out">LOG OUT</string>
    <string name="thanks_rate">Thank you for rating</string>
    <string name="please_input_user_name">You must input user name!</string>
    <string name="add_to_favorite_succes">Added favorite!</string>
    <string name="remove_to_favorite_succes">Removed favorite!</string>
    <string name="answer_anonymously">Answer Anonymously</string>
    <string name="error_login">Error Login</string>
    <string name="conten_report">Content report</string>
    <string name="report">REPORT</string>
    <string name="crop">Crop</string>
    <string name="no_crop">No Crop</string>
    <string name="reports">reports</string>
    <string name="nodata">No search result, please try again</string>
    <string name="total_earning">Total Earnings:</string>
    <string name="total_credits">Total Credits Available:</string>
    <string name="tranfer_to_credit">Transfer To Credits</string>
    <string name="transaction">TRANSACTIONS</string>
    <string name="how_work">How it Works?</string>
    <string name="contact_us">CONTACT US</string>
    <string name="about_popdq">About PopDQ</string>
    <string name="join_experts">JOIN EXPERTS</string>
</resources>