<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

            <com.popdq.app.view.textview.TextViewNormal
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/menu"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_menu" />

            <View
                android:layout_width="100dp"
                android:layout_height="3dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/title_underline"></View>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btnClose"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_alignParentRight="true"
            android:gravity="center">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/close_icon" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/creditleftlayout"
        android:layout_below="@+id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/profile_icon"
                custom:text="@string/profile"></com.popdq.app.view.ItemNavigationMenu>

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnMyQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/my_question_icon"
                custom:text="@string/my_question"></com.popdq.app.view.ItemNavigationMenu>

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnMyAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/my_answer_icon"
                custom:text="@string/my_answer"></com.popdq.app.view.ItemNavigationMenu>

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnMyPreView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/my_preview_icon"
                custom:text="@string/my_views"></com.popdq.app.view.ItemNavigationMenu>

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnBuyCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/buy_credits_icon"
                custom:text="@string/buy_credit"></com.popdq.app.view.ItemNavigationMenu>

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/buy_credits_icon"
                custom:text="@string/transaction"></com.popdq.app.view.ItemNavigationMenu>

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/share_icon"
                custom:text="@string/share"></com.popdq.app.view.ItemNavigationMenu>

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnMyInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/my_interest_icon"
                custom:text="@string/my_interest"></com.popdq.app.view.ItemNavigationMenu>

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/favorite_list_icon"
                custom:text="@string/favorite_list"></com.popdq.app.view.ItemNavigationMenu>

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnWithDraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/withdraw_icon"
                custom:text="@string/withdraw"></com.popdq.app.view.ItemNavigationMenu>

            <com.popdq.app.view.ItemNavigationMenu
                android:id="@+id/btnLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:icon_menu="@drawable/logout"
                custom:text="@string/log_out"></com.popdq.app.view.ItemNavigationMenu>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/creditleftlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatar"
            android:layout_width="@dimen/avatar_size_navigation"
            android:layout_height="@dimen/avatar_size_navigation"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@drawable/chatroom_avatar"
            app:civ_border_color="@color/border_color"
            app:civ_border_width="@dimen/border_avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.popdq.app.view.textview.TextViewNormal
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/earnings"
                    android:textColor="@color/white" />

                <com.popdq.app.view.textview.TextViewNormal
                    android:id="@+id/tvEarnings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.popdq.app.view.textview.TextViewNormal
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credits"
                    android:textColor="@color/white" />

                <com.popdq.app.view.textview.TextViewNormal
                    android:id="@+id/tvDeposits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>